--- a/package.json
+++ b/package.json
@@ -1,37 +1,54 @@
 {
-  "name": "sass-js",
-  "description": "Include Bootstrap's source Sass and compiled JavaScript bundle via npm.",
-  "version": "0.0.0",
+  "name": "bootstrap-npm-starter",
+  "version": "2.1.0",
   "private": true,
-  "repository": "twbs/examples",
+  "description": "Demo project for building a Bootstrap powered site via npm.",
+  "author": "mdo",
   "license": "MIT",
-  "stackblitz": {
-    "startCommand": "npm start"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/twbs/bootstrap-npm-starter.git"
   },
+  "bugs": {
+    "url": "https://github.com/twbs/bootstrap-npm-starter/issues"
+  },
+  "homepage": "https://github.com/twbs/bootstrap-npm-starter#readme",
   "scripts": {
     "build": "npm run css",
-    "css-compile": "sass --style compressed --source-map --embed-sources --no-error-css --load-path=node_modules scss/:css/",
+    "css-compile": "node-sass --include-path node_modules --output-style compressed --source-map true --source-map-contents true --precision 6 scss -o assets/css/",
     "css-lint": "stylelint scss/",
-    "css-prefix": "postcss --replace css/styles.css --use autoprefixer --map",
+    "css-prefix": "postcss --replace assets/css/starter.css --use autoprefixer --map",
+    "css-purge": "purgecss --keyframes --css assets/css/starter.css --content index.html \"node_modules/bootstrap/js/dist/{util,modal}.js\" --output assets/css/",
     "css": "npm-run-all css-compile css-prefix",
-    "server": "sirv --dev --no-clear --port 3000",
+    "server": "live-server --port=3000",
     "start": "npm-run-all --parallel watch server",
     "watch": "nodemon -e html,scss -x \"npm run css\"",
-    "test": "npm-run-all css-lint css"
+    "test": "npm run css-lint && npm run css"
   },
+  "keywords": [
+    "bootstrap",
+    "sass",
+    "css",
+    "javascript",
+    "starter",
+    "template"
+  ],
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^4.6.2",
+    "bootstrap-icons": "^1.10.3",
+    "jquery": "^3.6.4",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "nodemon": "^3.0.2",
+    "autoprefixer": "^10.4.14",
+    "live-server": "^1.2.2",
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.32",
-    "postcss-cli": "^11.0.0",
-    "sass": "^1.69.6",
-    "sirv-cli": "^2.0.2",
-    "stylelint": "^16.1.0",
-    "stylelint-config-twbs-bootstrap": "^13.0.0"
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
+    "purgecss": "^5.0.0",
+    "stylelint": "^14.16.1",
+    "stylelint-config-twbs-bootstrap": "^7.0.0"
   }
 }
